--- a/_config.yml
+++ b/_config.yml
@@ -5,26 +5,26 @@ paginate_path: "page:num"
 exclude: ["README.md"] # files to exclude
 highlighter: rouge
 markdown: kramdown
-disqus: dbyll
-google_analytics: dbyll
-title: dbyll
+disqus: ki-wips
+google_analytics: ki-wips
+title: ki-wips
 
 defaults:
   -
     scope:
       path: "" # empty string for all files
     values:
-      title: dbyll
+      title: ki-wips
 
 description: Stylish Jekyll Theme
 author:
-  name: dbyll
-  email: dbyll@ismaildemirbilek.com
-  github: dbtek
-  twitter: dbtek
-  pinterest: asd123
-  linkedin: asd123
-  bio: Your stylish, minimalist theme!
+  name: ki-wips
+  email: kiwipsco@gmail.com
+  github: ki-wips
+  twitter: ki-wips
+  pinterest: ki-wips
+  linkedin: Elena Botana de Castro
+  bio: Wireless IPS
   email_md5: 726351295ec82e145928582f595aa3aa
 
 rss_path: feed.xml
