--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ author:
   name: ki-wips
   email: kiwipsco@gmail.com
   github: ki-wips
-  twitter: ki-wips
+  twitter: elena_bdc
   pinterest: ki-wips
   linkedin: Elena Botana de Castro
   bio: Wireless IPS
