--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ defaults:
     values:
       title: ki-wips
 
-description: Stylish Jekyll Theme
+description: Wireless IPS
 author:
   name: ki-wips
   email: kiwipsco@gmail.com
